--- a/compute_jacobian.ipynb
+++ b/compute_jacobian.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -107,26 +107,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.316817, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 372.72, 0.0, -0.0279512, 0.0, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, -372.72, 0.0, 0.0, 0.0, -0.0279512, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.471576, -4.02198, 0.0, 0.00201099, 0.000235788, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, -301.143, 0.548561, 0.0, -0.00027428, -0.150572, 0.0, 0.0, 0.0]\n",
-      "A [0.0, 0.0, 0.0, 0.0, 0.0, 0.548561, -266.455, 0.0, 0.133227, 0.00027428, 0.0, 0.0, 0.0]\n"
+      "The geometric parameters do not correspond to the loaded file.\n"
+     ]
+    },
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching getindex(::Nothing, ::Colon, ::Int64)",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching getindex(::Nothing, ::Colon, ::Int64)",
+      "",
+      "Stacktrace:",
+      " [1] aerodynamics_coefficents_chebyshev_tan(::ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7}, ::Float64, ::Float64, ::Float64, ::Float64) at /home/simon/aa290/sphere_cone_model/aa290_sphere_cone_entry_vehicle.jl/AerodynamicsCoefficients.jl:387",
+      " [2] entry_vehicle_dynamics!(::Array{ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7},1}, ::Array{ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7},1}, ::Array{Float64,2}) at ./In[76]:88",
+      " [3] chunk_mode_jacobian(::typeof(open_loop_entry_vehicle_dynamics), ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7,Array{ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7},1}}) at ./In[76]:116",
+      " [4] jacobian(::Function, ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7,Array{ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7},1}}, ::Val{true}) at /home/simon/.julia/packages/ForwardDiff/okZnq/src/jacobian.jl:19",
+      " [5] jacobian(::Function, ::Array{Float64,1}, ::ForwardDiff.JacobianConfig{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7,Array{ForwardDiff.Dual{ForwardDiff.Tag{typeof(open_loop_entry_vehicle_dynamics),Float64},Float64,7},1}}) at /home/simon/.julia/packages/ForwardDiff/okZnq/src/jacobian.jl:15 (repeats 2 times)",
+      " [6] top-level scope at In[76]:118"
      ]
     }
    ],
@@ -184,7 +188,7 @@
     "    r_max = 1.30 # largest radius of the cone [m]\n",
     "    l = 0.55 # length of the cone [m]\n",
     "    m = 569.7 # mass of the Phoenix entry system [kg]\n",
-    "    x_g = -0.152 # axial center-of-gravity location [m]\n",
+    "    x_g = 1.0 #-0.152 # axial center-of-gravity location [m]\n",
     "    Jxx = 293.15 # Phoenix entry system [kg.m^2]\n",
     "    Jyy = 184 # Phoenix entry system [kg.m^2]\n",
     "    Jzz = 208.02 # Phoenix entry system [kg.m^2]\n",
@@ -215,7 +219,7 @@
     "    Rot_2_1 = [1 0 0; 0 s_cos_θ -s_sin_θ; 0 s_sin_θ s_cos_θ]\n",
     "    # Since α ∈ [0, π/2[ we can use atan with one variable, it is differentiable in 0.\n",
     "    ϵ = 1e-100\n",
-    "    α = atan(sqrt(V_inf[2]^2 + V_inf[3]^2 + ϵ^2) - ϵ / V_inf[1])\n",
+    "    α = atan((sqrt(V_inf[2]^2 + V_inf[3]^2 + ϵ^2) - ϵ) / V_inf[1])\n",
     "    \n",
     "    # Aerodynamic Forces and Moments in Freestream frame\n",
     "    C_F2, C_τ2 = aerodynamics_coefficents_chebyshev_tan(α, r_max, r_min, l, x_g)\n",
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +302,7 @@
        " 0.0  0.0  0.0  0.0  0.0     0.548561      0.00027428   0.0  0.0  0.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +336,7 @@
        "  -0.3168174565559539 + 0.0im               "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {
     "scrolled": true
    },
@@ -367,7 +371,7 @@
        "  3.91574e-7+0.0im   2.47657e-5+0.0im"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,29 +382,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "13×13 Array{Complex{Float64},2}:\n",
-       " 0.0+0.0im           0.0+0.0im  …      0.953301+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im     -1.53178e-13+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im     -6.97612e-18+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im              0.0+0.0im  1.0+0.0im\n",
-       " 1.0+0.0im          -1.0+0.0im       1.2619e-16+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im  …   1.31154e-21+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im      2.60749e-18+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im        -0.302022+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im      2.83246e-16+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im      1.27255e-18+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im  2.60542e-291+0.0im  …  -7.99586e-17+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im     -1.11124e-19+0.0im  0.0+0.0im\n",
-       " 0.0+0.0im           0.0+0.0im      1.53143e-17+0.0im  0.0+0.0im"
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im  …  0.0+0.0im  -0.953301+0.0im\n",
+       " 1.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  1.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     1.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  1.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im  …  0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im   0.302022+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im  …  0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im\n",
+       " 0.0+0.0im  0.0+0.0im  0.0+0.0im     0.0+0.0im        0.0+0.0im"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
