--- a/atmosphere_model_comparison.ipynb
+++ b/atmosphere_model_comparison.ipynb
@@ -5,33 +5,32 @@
    "metadata": {},
    "source": [
     "# Computing Mars Atmosphere Density\n",
+    "# Comparing atmosphere models\n",
     "\n",
     "https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20070032693.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using ApproxFun\n",
-    "using LinearAlgebra\n",
     "using PyCall\n",
     "using PyPlot\n",
-    "using JLD"
+    "include(\"AtmosphereModel.jl\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use tabulated data from https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20070032693.pdf."
+    "We use data table from https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20070032693.pdf."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,113 +57,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We approximate this data using a Chebyshev polynomial.\n",
-    "Note that an evenly spaced grid suffers from instability for large n. The easiest way around this is to use least squares with more points than coefficients, instead of interpolation:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "atmosphere_density_chebyshev (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function compute_chebyshev_coefficients_atmosphere_log(height, density, order)\n",
-    "    altitude_min = height[1]\n",
-    "    altitude_max = height[end]\n",
-    "    num_nodes = size(density)[1]\n",
-    "    space = Chebyshev(Interval(altitude_min, altitude_max))\n",
-    "    # a non-default grid\n",
-    "    points = range(altitude_min, stop=altitude_max, length=num_nodes) \n",
-    "    values = log.(density)\n",
-    "    # Create a Vandermonde matrix by evaluating the basis at the grid\n",
-    "    V = zeros(Float64, num_nodes, order)\n",
-    "    for k = 1:order\n",
-    "        V[:, k] = Fun(space,[zeros(k-1);1]).(points)\n",
-    "    end\n",
-    "    atmosphere_polynomial_log = Fun(space, V\\values)\n",
-    "    atmosphere_coefficients = atmosphere_polynomial_log.coefficients\n",
-    "    return atmosphere_coefficients\n",
-    "end\n",
-    "\n",
-    "function save_chebyshev_coefficients_atmosphere_log(height, density, order, filename)\n",
-    "    atmosphere_coefficients = compute_chebyshev_coefficients_atmosphere_log(height, density, order)\n",
-    "    save(filename, \"atmosphere_coefficients\", atmosphere_coefficients, \"altitude_min\", altitude_min, \"altitude_max\", altitude_max)\n",
-    "end\n",
-    "\n",
-    "function load_chebyshev_approximation_atmosphere_log(filename)\n",
-    "    file = load(filename)\n",
-    "#     if altitude_min != file[\"altitude_min\"] || altitude_max != file[\"altitude_max\"]\n",
-    "#         println(\"The altitude parameters (min/max) do not correspond to the loaded file.\")\n",
-    "#     end\n",
-    "    altitude_min = file[\"altitude_min\"]\n",
-    "    altitude_max = file[\"altitude_max\"]\n",
-    "    atmosphere_coefficients = file[\"atmosphere_coefficients\"]\n",
-    "    return atmosphere_coefficients, altitude_min, altitude_max\n",
-    "end\n",
-    "\n",
-    "function atmosphere_density_chebyshev(altitude)\n",
-    "    atmosphere_coefficients, altitude_min, altitude_max = load_chebyshev_approximation_atmosphere_log(\"chebyshev_coefficients_atmosphere.jld\")\n",
-    "    space = Chebyshev(Interval(altitude_min, altitude_max))\n",
-    "    density_polynomial_log = Fun(space, atmosphere_coefficients)\n",
-    "    density = exp(density_polynomial_log(altitude))\n",
-    "    return density\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "plot_atmosphere_density (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function plot_atmosphere_density(density, height, num_nodes; display=true)\n",
-    "    altitude_min = height[1]\n",
-    "    altitude_max = height[end]    \n",
-    "    height_poly = range(altitude_min, stop=altitude_max, length=num_nodes)\n",
-    "    density_poly = atmosphere_density_chebyshev.(height_poly)\n",
-    "    plot(height_poly, log.(10, density_poly), color=\"blue\", linewidth=3.0, linestyle=\"-.\", label=\"density_poly\")\n",
-    "    plot(height, log.(10, density), color=\"red\", linewidth=2.0, linestyle=\"-\", label=\"density_table\")\n",
-    "    legend()\n",
-    "    xlabel(\"Altitude in m\")\n",
-    "    ylabel(\"log_10(density) in kg/m^3\")\n",
-    "    title(\"Mars Atmosphere Density.\")\n",
-    "    grid(\"on\")\n",
-    "    if display \n",
-    "        tight_layout() \n",
-    "        show()\n",
-    "    end\n",
-    "    return\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -185,8 +79,8 @@
     "filename = \"chebyshev_coefficients_atmosphere.jld\"\n",
     "num_nodes = 1000\n",
     "\n",
-    "# save_chebyshev_coefficients_atmosphere_log(height, density, order, filename)\n",
-    "plot_atmosphere_density(density, height, num_nodes)"
+    "save_chebyshev_coefficients_atmosphere_log(height, density, order, filename)\n",
+    "plot_atmosphere_density_empirical(density, height, num_nodes)"
    ]
   },
   {
@@ -198,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,86 +102,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Parametric and exponential model definition."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "compute_atmosphere_density_parametric (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function compute_atmosphere_density_exp(altitude)\n",
-    "    # Exponential model\n",
-    "    ρ_inf = ρ_0 * exp(- altitude / h)\n",
-    "    return ρ_inf\n",
-    "end\n",
-    "\n",
-    "function compute_atmosphere_density_parametric(altitude)\n",
-    "    temperature = -23.4 - 0.00222 * altitude\n",
-    "    pressure = 0.699 * exp(-0.00009 * altitude)\n",
-    "    ρ_inf = pressure / (0.1921 * (temperature + 273.1))\n",
-    "    return ρ_inf\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "plot_atmosphere_density (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function plot_atmosphere_density(altitude_min, altitude_max, num_nodes; display=true)\n",
-    "    altitude = range(altitude_min, stop=altitude_max, length=num_nodes)\n",
-    "\n",
-    "    density_exp = compute_atmosphere_density_exp.(altitude)\n",
-    "    density_parametric = compute_atmosphere_density_parametric.(altitude)\n",
-    "    density_chebyshev = atmosphere_density_chebyshev.(altitude)\n",
-    "\n",
-    "    plot(altitude, log.(10, density_exp), color=\"blue\", linewidth=2.0, linestyle=\"-\", label=\"density_exp\")\n",
-    "    plot(altitude, log.(10, density_parametric), color=\"red\", linewidth=2.0, linestyle=\":\", label=\"density_parametric\")\n",
-    "    plot(altitude, log.(10, density_chebyshev), color=\"green\", linewidth=2.0, linestyle=\"-.\", label=\"density_chebyshev\")\n",
-    "    legend()\n",
-    "    xlabel(\"Altitude in m\")\n",
-    "    ylabel(\"log_10(density) in kg/m^3\")\n",
-    "    title(\"Mars Atmosphere Density.\")\n",
-    "    grid(\"on\")\n",
-    "    if display\n",
-    "        tight_layout() \n",
-    "        show()\n",
-    "    end\n",
-    "    return\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +121,7 @@
     "altitude_min = 5000\n",
     "altitude_max = 112000\n",
     "num_nodes = 1000\n",
-    "plot_atmosphere_density(altitude_min, altitude_max, num_nodes)"
+    "plot_atmosphere_density_comparison(altitude_min, altitude_max, num_nodes)"
    ]
   },
   {
@@ -332,8 +148,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "da3ad12c8b8942c6a0ba0e2665095bdd",
-   "lastKernelId": "c5b4fe26-1ab6-4218-a8cc-ccdc5770d65d"
+   "lastCommId": "75ac4336b738458b8dcb6cd555f63c3c",
+   "lastKernelId": "6b038b2a-218c-4cd3-8299-ce9264ee715e"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
