--- a/checking_coefficient_computation.ipynb
+++ b/checking_coefficient_computation.ipynb
@@ -10,14 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using ChebyshevApprox\n",
-    "using ForwardDiff\n",
-    "using LinearAlgebra\n",
-    "include(\"AerodynamicsCoefficients.jl\")"
+    "include(\"AerodynamicsCoefficients.jl\");"
    ]
   },
   {
@@ -30,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +97,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Comparison with the original paper.\n",
     "The points at alpha=0 deg in the paper corresponds to alpha=20 deg in our formulation (because of beta).\n",
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -202,12 +197,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "b655a66eebe3498387da5522d764fba2",
-   "lastKernelId": "f207e9c4-098d-4c19-903c-3e4fed52f8ee"
+   "lastCommId": "dd1cbca27bb94af289cfbdcd24e7e7d9",
+   "lastKernelId": "1d24474a-63fd-4a53-bda5-f6ce9df482a3"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
