--- a/notebooks/atmosphere_model_comparison.ipynb
+++ b/notebooks/atmosphere_model_comparison.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"AtmosphereModel.jl\")"
+    "include(\"../scripts/AtmosphereModel.jl\")"
    ]
   },
   {
@@ -148,8 +148,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "75ac4336b738458b8dcb6cd555f63c3c",
-   "lastKernelId": "6b038b2a-218c-4cd3-8299-ce9264ee715e"
+   "lastCommId": "02514c9265844b1c8351bf50cb312c13",
+   "lastKernelId": "b2d8a8f2-6c58-411a-9f87-d4c7b5547d72"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
