--- a/notebooks/center_of_pressure.ipynb
+++ b/notebooks/center_of_pressure.ipynb
@@ -27,9 +27,9 @@
     "using LinearAlgebra\n",
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"AerodynamicsModel.jl\")\n",
-    "include(\"Params.jl\")\n",
-    "include(\"SphereConeVehicleModel.jl\")"
+    "include(\"../scripts/AerodynamicsModel.jl\")\n",
+    "include(\"../scripts/Params.jl\")\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\")"
    ]
   },
   {
@@ -533,8 +533,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "e61c14b60c3745c2bd95e38affe41577",
-   "lastKernelId": "09474dbe-46e6-4296-970c-79c0104f2640"
+   "lastCommId": "f80f2d083f93423d8f2eadd1dc614fab",
+   "lastKernelId": "5595dba7-4557-4d27-9456-adef4f25fa5f"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
