--- a/notebooks/checking_RCS.ipynb
+++ b/notebooks/checking_RCS.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "using LinearAlgebra\n",
-    "include(\"Params.jl\");\n",
-    "include(\"SphereConeVehicleModel.jl\");"
+    "include(\"../scripts/Params.jl\");\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\");"
    ]
   },
   {
@@ -164,8 +164,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "e0d56d7ab47c4fc5acbf8c289c401507",
-   "lastKernelId": "21fa4bb4-f6f6-4214-a8e4-6222fa44260d"
+   "lastCommId": "0539a8a89ec74e14b6d082dcb81297bd",
+   "lastKernelId": "c154e9de-daf3-4537-ae98-4b163e49a316"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
