--- a/notebooks/checking_coefficient_computation.ipynb
+++ b/notebooks/checking_coefficient_computation.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"AerodynamicsCoefficients.jl\");"
+    "include(\"../scripts/AerodynamicsCoefficients.jl\");"
    ]
   },
   {
@@ -208,8 +208,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "dd1cbca27bb94af289cfbdcd24e7e7d9",
-   "lastKernelId": "1d24474a-63fd-4a53-bda5-f6ce9df482a3"
+   "lastCommId": "16ac45b9268645328ea2bf6430c6bf94",
+   "lastKernelId": "4ebf6c2b-921a-46f2-ad93-309f98c51d30"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
