--- a/notebooks/checking_simplified_dynamics.ipynb
+++ b/notebooks/checking_simplified_dynamics.ipynb
@@ -15,8 +15,8 @@
    "source": [
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"Params.jl\");\n",
-    "include(\"SphereConeVehicleModel.jl\");"
+    "include(\"../scripts/Params.jl\");\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\");"
    ]
   },
   {
@@ -277,8 +277,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "770d281e22894cf683bdc1b319fff9ad",
-   "lastKernelId": "c5b9aa08-64dd-4e59-82bc-022cdb7e49d5"
+   "lastCommId": "b547365df4154d4284bc1b80467dc97c",
+   "lastKernelId": "c34e6411-dcb8-475e-aae2-b9afc3152963"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
