--- a/notebooks/iLQR_controller.ipynb
+++ b/notebooks/iLQR_controller.ipynb
@@ -17,8 +17,8 @@
     "using TrajectoryOptimization\n",
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"Params.jl\");\n",
-    "include(\"SphereConeVehicleModel.jl\");"
+    "include(\"../scripts/Params.jl\");\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\");"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "              \"r_max\" => 1.30, # largest radius of the cone [m]\n",
     "              \"δ\" => 40 / 360 * 2 * pi, # opening angle of the cone [rad]\n",
     "              \"m\" => 569.7, # mass of the Phoenix entry system [kg]\n",
-    "              \"x_g\" => 0.20, # axial center-of-gravity location [m]\n",
+    "              \"x_g\" => 0.10, # axial center-of-gravity location [m]\n",
     "              \"c\" => 1.20, # distance between the radial axis and the cluster of thrusters[m]\n",
     "              \"F_max\" => 36.0, # maximum force applied by the thrusters [N]\n",
     "              \"Jxx\" => 293.15, # Phoenix entry system [kg.m^2]\n",
@@ -651,8 +651,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "2bf4cc224a654bc38a21266fbc599155",
-   "lastKernelId": "d7aa6b42-1d63-4f0e-b49b-e2ddd3f2df7b"
+   "lastCommId": "582cf617bc0a4b1fbf453d6ab0ff0dce",
+   "lastKernelId": "9ff4533a-a15e-44c6-bc54-0b6ba170dd57"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
