--- a/notebooks/integrating_simplified_dynamics.ipynb
+++ b/notebooks/integrating_simplified_dynamics.ipynb
@@ -27,9 +27,9 @@
     "using DifferentialEquations\n",
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"AerodynamicsModel.jl\")\n",
-    "include(\"Params.jl\")\n",
-    "include(\"SphereConeVehicleModel.jl\")"
+    "include(\"../scripts/AerodynamicsModel.jl\")\n",
+    "include(\"../scripts/Params.jl\")\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\")"
    ]
   },
   {
@@ -372,8 +372,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "994c3c46b68f44ad8dc3820983805c74",
-   "lastKernelId": "bca1766f-4946-4123-95bd-2fe8f2b2b5fd"
+   "lastCommId": "268871b72121400290bcdd54dc5e2413",
+   "lastKernelId": "e00f5ddb-de43-4d0e-820b-75f2dcf2a9ae"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
