--- a/notebooks/stabilty_analysis.ipynb
+++ b/notebooks/stabilty_analysis.ipynb
@@ -35,9 +35,9 @@
     "using LinearAlgebra\n",
     "using PyCall\n",
     "using PyPlot\n",
-    "include(\"AerodynamicsModel.jl\")\n",
-    "include(\"Params.jl\")\n",
-    "include(\"SphereConeVehicleModel.jl\")"
+    "include(\"../scripts/AerodynamicsModel.jl\")\n",
+    "include(\"../scripts/Params.jl\")\n",
+    "include(\"../scripts/SphereConeVehicleModel.jl\")"
    ]
   },
   {
@@ -644,8 +644,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "3cd50b9995174ae68f4e79b4d4b28732",
-   "lastKernelId": "16597e5a-ae7c-4555-a4a4-c0c078a76bb1"
+   "lastCommId": "8e18de52054743408dd94b6c9145406e",
+   "lastKernelId": "c70f9b38-0108-4dab-b97f-32b2504d9201"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.1",
