adding mrp dynamics

--- a/notebooks/iLQR_implementation_translation.ipynb
+++ b/notebooks/iLQR_implementation_translation.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /home/simon/.julia/compiled/v1.0/TrajectoryOptimization/Flw6O.ji for TrajectoryOptimization [7d60e499-3ad9-587e-a260-f318c741da60]\n",
+      "└ @ Base loading.jl:1187\n",
+      "┌ Info: Recompiling stale cache file /home/simon/.julia/compiled/v1.0/PyCall/GkzkC.ji for PyCall [438e738f-606a-5dbb-bf0a-cddfbfd45ab0]\n",
+      "└ @ Base loading.jl:1187\n",
+      "┌ Info: Recompiling stale cache file /home/simon/.julia/compiled/v1.0/PyPlot/oatAj.ji for PyPlot [d330b81b-6aea-500a-939a-2ce795aea3ee]\n",
+      "└ @ Base loading.jl:1187\n"
+     ]
+    }
+   ],
    "source": [
     "using LinearAlgebra\n",
     "using TrajectoryOptimization\n",
@@ -30,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,163 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mrptodcm (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function entry_vehicle_MRP_simplified_dynamics!(ẋ, X, u, params)\n",
-    "    ## States: X ∈ R^13; q = [s;v]\n",
-    "    # x\n",
-    "    # y\n",
-    "    # z\n",
-    "    # q0\n",
-    "    # q1\n",
-    "    # q2\n",
-    "    # q3\n",
-    "    # xdot\n",
-    "    # ydot\n",
-    "    # zdot\n",
-    "    # omega1\n",
-    "    # omega2\n",
-    "    # omega3\n",
-    "\n",
-    "    x = X[1:3]\n",
-    "    r = X[4:6] # MRP\n",
-    "    v = X[7:9]\n",
-    "    ω = X[10:12]\n",
-    "\n",
-    "    # Parameters\n",
-    "    r_min = params[\"r_min\"] # smallest radius of the cone [m]\n",
-    "    r_max = params[\"r_max\"] # largest radius of the cone [m]\n",
-    "    l = params[\"l\"] # largest radius of the cone [m]\n",
-    "    m = params[\"m\"] # mass of the Phoenix entry system [kg]\n",
-    "    x_g = params[\"x_g\"] # axial center-of-gravity location [m]\n",
-    "    Jxx = params[\"Jxx\"] # Phoenix entry system [kg.m^2]\n",
-    "    Jyy = params[\"Jyy\"] # Phoenix entry system [kg.m^2]\n",
-    "    Jzz = Jyy # Phoenix entry system [kg.m^2]\n",
-    "    Jxy = 0.0 # Phoenix entry system [kg.m^2]\n",
-    "    Jxz = 0.0 # Phoenix entry system [kg.m^2]\n",
-    "    Jyz = 0.0 # Phoenix entry system [kg.m^2]\n",
-    "    g = params[\"g\"] # Mars gravity [m^2.s^-1]\n",
-    "    ρ_0 = params[\"ρ_0\"] # Surface density of Mars atmosphere [kg.m^-3]\n",
-    "    ω_p = [0, 0, 0] # Angular velocity of Mars [rad.s^-1]\n",
-    "    J = Matrix([Jxx Jxy Jxz; Jxy Jyy Jyz; Jxz Jyz Jzz])# Inertia matrix [kg.m^2]\n",
-    "    Jinv = inv(J) # inverted inertia matrix [kg^-1.m^-2]\n",
-    "\n",
-    "    # Rotation\n",
-    "    R = mrptodcm(r)\n",
-    "\n",
-    "    # Mars atmosphere model\n",
-    "    # We simplify the atmosphere model to a constant density.  \n",
-    "    ρ_inf = ρ_0\n",
-    "\n",
-    "    # Freestream Velocity\n",
-    "    # Static fluid assumption\n",
-    "    V_inf = - R' * (v + cross(x, ω_p)) #- qrot(qconj(q), v + cross(x, ω_p))\n",
-    "\n",
-    "    # Compute the force and torque applied of the vehicle at the center of mass.\n",
-    "    F_hat = params[\"F_hat\"]\n",
-    "    τ_hat = params[\"τ_hat\"]\n",
-    "    F_a, τ_a = illuminated_aerodynamics_online(F_hat, τ_hat, ρ_inf, V_inf)\n",
-    "\n",
-    "    # Control forces and moments in body_frame\n",
-    "    F_c, τ_c = reaction_control_system(u, params)\n",
-    "\n",
-    "    # Forces and moments in body-frame\n",
-    "    F = F_a + F_c\n",
-    "    τ = τ_a + τ_c\n",
-    "\n",
-    "    ẋ[1:3] = v # velocity in world frame\n",
-    "    ẋ[4:6] = 0.25 * ((1 - r'*r) * ω - 2 * cross(ω,r) + 2 * (ω' * r) * r) #  0.5 * qmult(q, [0; ω]) #quaternion derivative\n",
-    "    ẋ[7:9] = [g, 0, 0] + (1 / m) * (R * F) #[g, 0, 0] + (1 / m) * qrot(q, F) #acceleration in world frame\n",
-    "    #Euler's equation: I*ω + ω x I*ω = constraint_decrease_ratio\n",
-    "    ẋ[10:12] = Jinv * (τ - cross(ω , J * ω))\n",
-    "    return ẋ\n",
-    "end\n",
-    "\n",
-    "function entry_vehicle_mrp_simplified_dynamics(X, u, params)\n",
-    "    ẋ = zeros(13,1)\n",
-    "    entry_vehicle_mrp_simplified_dynamics!(ẋ, X, u, params)\n",
-    "    return ẋ\n",
-    "end\n",
-    "\n",
-    "\n",
-    "function mrptodcm(mrp)\n",
-    "    # Converts a vector of Modified Rodrigues Parameters to a Rotation Matrix\n",
-    "    mrp2 = mrp' * mrp;\n",
-    "    S = [0       -mrp[3] mrp[2];\n",
-    "         mrp[3]  0       -mrp[1];\n",
-    "         -mrp[2] mrp[1]  0]\n",
-    "    I = diagm(0=>fill(1., 3))\n",
-    "    R = I + (8 * S * S + 4 * (1 - mrp2) * S) / ((1 + mrp2)^2)\n",
-    "    return R\n",
-    "end\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -259,15 +115,15 @@
        "TrajectoryOptimization.AnalyticalModel(entry_vehicle_simplified_dynamics!, 13, 12, [0], Dict{Symbol,Any}(:evals=>0))"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Analytic Model\n",
-    "function entry_vehicle_mrp_simplified_dynamics!(ẋ,x,u)\n",
-    "    entry_vehicle_simplified_mrp_dynamics!(ẋ, x, u, params)\n",
+    "function entry_vehicle_simplified_dynamics!(ẋ,x,u)\n",
+    "    entry_vehicle_simplified_dynamics!(ẋ, x, u, params)\n",
     "end\n",
     "# Number of states\n",
     "n = 13\n",
@@ -286,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 116,
    "metadata": {
     "scrolled": false
    },
@@ -558,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
